hphp/hack/test/typecheck/iface_require_extends3.php.exp
File "iface_require_extends3.php", line 6, characters 3-28:
Only traits may use `require implements`. (Parsing[1002])
