hphp/hack/test/typecheck/iface_require_extends3.php
<?hh // partial

interface ISuper {}

interface IMarked {
  require implements ISuper;

  public function methodOfMarked(): int;
}
